tpiParser.py
# Generated from tpi.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class tpiParser ( Parser ):

    grammarFileName = "tpi.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "':'", "';'", "'-'", "'+'", "<INVALID>", 
                     "'*'", "'/'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'**'", "'_no'", "'('", "')'", "'<>'", "'<'", "'>'", 
                     "'<='", "'>='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "ACCION", "ES", "FINACCION", 
                      "AMBIENTE", "PROCESO", "TIPODEDATO", "MIENTRAS", "HACER", 
                      "FINMIENTRAS", "HASTAQUE", "REPETIR", "SI", "ENTONCES", 
                      "SINO", "FINSI", "PARA", "HASTA", "FINPARA", "SEGUN", 
                      "DEFECTO", "FINSEGUN", "CADENA", "ESCRIBIR", "LEER", 
                      "IGUAL", "DPUNTOS", "SEMI", "MENOS", "MAS", "OR", 
                      "MULTI", "DIVENT", "DIV", "MOD", "AND", "POT", "NOTL", 
                      "PAR", "IPAR", "DESIGUAL", "MENORA", "MAYORA", "MENOROI", 
                      "MAYOROI", "COMA", "NUMEROENTERO", "REAL", "ASIGNACION", 
                      "ASGINACIONINC", "BOOL", "IDENTIFICADOR", "TXT", "WHITESPACE", 
                      "NEWLINE", "COMENTARIO1", "COMENTARIO2" ]

    RULE_start = 0
    RULE_programa = 1
    RULE_ambiente = 2
    RULE_lineaambiente = 3
    RULE_variable = 4
    RULE_constante = 5
    RULE_proceso = 6
    RULE_lineacod = 7
    RULE_asignacion = 8
    RULE_asignacioninc = 9
    RULE_sentencias = 10
    RULE_condicional = 11
    RULE_iterativas = 12
    RULE_lineasegun = 13
    RULE_funcion = 14
    RULE_arg = 15
    RULE_expresion = 16
    RULE_siexpresion = 17
    RULE_factor = 18
    RULE_termino = 19
    RULE_hoja = 20
    RULE_dato = 21
    RULE_operadorrelacional = 22
    RULE_addoperador = 23
    RULE_multioperador = 24
    RULE_numero = 25

    ruleNames =  [ "start", "programa", "ambiente", "lineaambiente", "variable", 
                   "constante", "proceso", "lineacod", "asignacion", "asignacioninc", 
                   "sentencias", "condicional", "iterativas", "lineasegun", 
                   "funcion", "arg", "expresion", "siexpresion", "factor", 
                   "termino", "hoja", "dato", "operadorrelacional", "addoperador", 
                   "multioperador", "numero" ]

    EOF = Token.EOF
    T__0=1
    ACCION=2
    ES=3
    FINACCION=4
    AMBIENTE=5
    PROCESO=6
    TIPODEDATO=7
    MIENTRAS=8
    HACER=9
    FINMIENTRAS=10
    HASTAQUE=11
    REPETIR=12
    SI=13
    ENTONCES=14
    SINO=15
    FINSI=16
    PARA=17
    HASTA=18
    FINPARA=19
    SEGUN=20
    DEFECTO=21
    FINSEGUN=22
    CADENA=23
    ESCRIBIR=24
    LEER=25
    IGUAL=26
    DPUNTOS=27
    SEMI=28
    MENOS=29
    MAS=30
    OR=31
    MULTI=32
    DIVENT=33
    DIV=34
    MOD=35
    AND=36
    POT=37
    NOTL=38
    PAR=39
    IPAR=40
    DESIGUAL=41
    MENORA=42
    MAYORA=43
    MENOROI=44
    MAYOROI=45
    COMA=46
    NUMEROENTERO=47
    REAL=48
    ASIGNACION=49
    ASGINACIONINC=50
    BOOL=51
    IDENTIFICADOR=52
    TXT=53
    WHITESPACE=54
    NEWLINE=55
    COMENTARIO1=56
    COMENTARIO2=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa(self):
            return self.getTypedRuleContext(tpiParser.ProgramaContext,0)


        def EOF(self):
            return self.getToken(tpiParser.EOF, 0)

        def NEWLINE(self):
            return self.getToken(tpiParser.NEWLINE, 0)

        def getRuleIndex(self):
            return tpiParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = tpiParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.programa()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tpiParser.NEWLINE:
                self.state = 53
                self.match(tpiParser.NEWLINE)


            self.state = 56
            self.match(tpiParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACCION(self):
            return self.getToken(tpiParser.ACCION, 0)

        def IDENTIFICADOR(self):
            return self.getToken(tpiParser.IDENTIFICADOR, 0)

        def ES(self):
            return self.getToken(tpiParser.ES, 0)

        def NEWLINE(self):
            return self.getToken(tpiParser.NEWLINE, 0)

        def ambiente(self):
            return self.getTypedRuleContext(tpiParser.AmbienteContext,0)


        def proceso(self):
            return self.getTypedRuleContext(tpiParser.ProcesoContext,0)


        def FINACCION(self):
            return self.getToken(tpiParser.FINACCION, 0)

        def getRuleIndex(self):
            return tpiParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = tpiParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(tpiParser.ACCION)
            self.state = 59
            self.match(tpiParser.IDENTIFICADOR)
            self.state = 60
            self.match(tpiParser.ES)
            self.state = 61
            self.match(tpiParser.NEWLINE)
            self.state = 62
            self.ambiente()
            self.state = 63
            self.proceso()
            self.state = 64
            self.match(tpiParser.FINACCION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AmbienteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMBIENTE(self):
            return self.getToken(tpiParser.AMBIENTE, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tpiParser.NEWLINE)
            else:
                return self.getToken(tpiParser.NEWLINE, i)

        def lineaambiente(self):
            return self.getTypedRuleContext(tpiParser.LineaambienteContext,0)


        def getRuleIndex(self):
            return tpiParser.RULE_ambiente

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAmbiente" ):
                listener.enterAmbiente(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAmbiente" ):
                listener.exitAmbiente(self)




    def ambiente(self):

        localctx = tpiParser.AmbienteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ambiente)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(tpiParser.AMBIENTE)
            self.state = 68 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 67
                self.match(tpiParser.NEWLINE)
                self.state = 70 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==tpiParser.NEWLINE):
                    break

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tpiParser.IDENTIFICADOR:
                self.state = 72
                self.lineaambiente()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineaambienteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(tpiParser.VariableContext,0)


        def constante(self):
            return self.getTypedRuleContext(tpiParser.ConstanteContext,0)


        def getRuleIndex(self):
            return tpiParser.RULE_lineaambiente

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineaambiente" ):
                listener.enterLineaambiente(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineaambiente" ):
                listener.exitLineaambiente(self)




    def lineaambiente(self):

        localctx = tpiParser.LineaambienteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lineaambiente)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.variable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.constante()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(tpiParser.IDENTIFICADOR, 0)

        def DPUNTOS(self):
            return self.getToken(tpiParser.DPUNTOS, 0)

        def TIPODEDATO(self):
            return self.getToken(tpiParser.TIPODEDATO, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tpiParser.NEWLINE)
            else:
                return self.getToken(tpiParser.NEWLINE, i)

        def lineaambiente(self):
            return self.getTypedRuleContext(tpiParser.LineaambienteContext,0)


        def getRuleIndex(self):
            return tpiParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = tpiParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(tpiParser.IDENTIFICADOR)
            self.state = 80
            self.match(tpiParser.DPUNTOS)
            self.state = 81
            self.match(tpiParser.TIPODEDATO)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.match(tpiParser.NEWLINE)
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==tpiParser.NEWLINE):
                    break

            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tpiParser.IDENTIFICADOR:
                self.state = 87
                self.lineaambiente()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstanteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(tpiParser.IDENTIFICADOR, 0)

        def IGUAL(self):
            return self.getToken(tpiParser.IGUAL, 0)

        def termino(self):
            return self.getTypedRuleContext(tpiParser.TerminoContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tpiParser.NEWLINE)
            else:
                return self.getToken(tpiParser.NEWLINE, i)

        def lineaambiente(self):
            return self.getTypedRuleContext(tpiParser.LineaambienteContext,0)


        def getRuleIndex(self):
            return tpiParser.RULE_constante

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstante" ):
                listener.enterConstante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstante" ):
                listener.exitConstante(self)




    def constante(self):

        localctx = tpiParser.ConstanteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constante)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(tpiParser.IDENTIFICADOR)
            self.state = 91
            self.match(tpiParser.IGUAL)
            self.state = 92
            self.termino()
            self.state = 94 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.match(tpiParser.NEWLINE)
                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==tpiParser.NEWLINE):
                    break

            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tpiParser.IDENTIFICADOR:
                self.state = 98
                self.lineaambiente()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcesoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCESO(self):
            return self.getToken(tpiParser.PROCESO, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tpiParser.NEWLINE)
            else:
                return self.getToken(tpiParser.NEWLINE, i)

        def lineacod(self):
            return self.getTypedRuleContext(tpiParser.LineacodContext,0)


        def getRuleIndex(self):
            return tpiParser.RULE_proceso

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProceso" ):
                listener.enterProceso(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProceso" ):
                listener.exitProceso(self)




    def proceso(self):

        localctx = tpiParser.ProcesoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_proceso)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(tpiParser.PROCESO)
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.match(tpiParser.NEWLINE)
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==tpiParser.NEWLINE):
                    break

            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tpiParser.MIENTRAS) | (1 << tpiParser.REPETIR) | (1 << tpiParser.SI) | (1 << tpiParser.PARA) | (1 << tpiParser.SEGUN) | (1 << tpiParser.ESCRIBIR) | (1 << tpiParser.LEER) | (1 << tpiParser.IDENTIFICADOR))) != 0):
                self.state = 107
                self.lineacod()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineacodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(tpiParser.AsignacionContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tpiParser.NEWLINE)
            else:
                return self.getToken(tpiParser.NEWLINE, i)

        def lineacod(self):
            return self.getTypedRuleContext(tpiParser.LineacodContext,0)


        def funcion(self):
            return self.getTypedRuleContext(tpiParser.FuncionContext,0)


        def sentencias(self):
            return self.getTypedRuleContext(tpiParser.SentenciasContext,0)


        def asignacioninc(self):
            return self.getTypedRuleContext(tpiParser.AsignacionincContext,0)


        def getRuleIndex(self):
            return tpiParser.RULE_lineacod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineacod" ):
                listener.enterLineacod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineacod" ):
                listener.exitLineacod(self)




    def lineacod(self):

        localctx = tpiParser.LineacodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lineacod)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.asignacion()
                self.state = 112 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 111
                        self.match(tpiParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 114 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tpiParser.MIENTRAS) | (1 << tpiParser.REPETIR) | (1 << tpiParser.SI) | (1 << tpiParser.PARA) | (1 << tpiParser.SEGUN) | (1 << tpiParser.ESCRIBIR) | (1 << tpiParser.LEER) | (1 << tpiParser.IDENTIFICADOR))) != 0):
                    self.state = 116
                    self.lineacod()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.funcion()
                self.state = 121 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 120
                        self.match(tpiParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 123 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tpiParser.MIENTRAS) | (1 << tpiParser.REPETIR) | (1 << tpiParser.SI) | (1 << tpiParser.PARA) | (1 << tpiParser.SEGUN) | (1 << tpiParser.ESCRIBIR) | (1 << tpiParser.LEER) | (1 << tpiParser.IDENTIFICADOR))) != 0):
                    self.state = 125
                    self.lineacod()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.sentencias()
                self.state = 130 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 129
                        self.match(tpiParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 132 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tpiParser.MIENTRAS) | (1 << tpiParser.REPETIR) | (1 << tpiParser.SI) | (1 << tpiParser.PARA) | (1 << tpiParser.SEGUN) | (1 << tpiParser.ESCRIBIR) | (1 << tpiParser.LEER) | (1 << tpiParser.IDENTIFICADOR))) != 0):
                    self.state = 134
                    self.lineacod()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.asignacioninc()
                self.state = 139 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 138
                        self.match(tpiParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 141 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tpiParser.MIENTRAS) | (1 << tpiParser.REPETIR) | (1 << tpiParser.SI) | (1 << tpiParser.PARA) | (1 << tpiParser.SEGUN) | (1 << tpiParser.ESCRIBIR) | (1 << tpiParser.LEER) | (1 << tpiParser.IDENTIFICADOR))) != 0):
                    self.state = 143
                    self.lineacod()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(tpiParser.IDENTIFICADOR, 0)

        def ASIGNACION(self):
            return self.getToken(tpiParser.ASIGNACION, 0)

        def expresion(self):
            return self.getTypedRuleContext(tpiParser.ExpresionContext,0)


        def getRuleIndex(self):
            return tpiParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = tpiParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(tpiParser.IDENTIFICADOR)
            self.state = 149
            self.match(tpiParser.ASIGNACION)
            self.state = 150
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionincContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(tpiParser.IDENTIFICADOR, 0)

        def ASGINACIONINC(self):
            return self.getToken(tpiParser.ASGINACIONINC, 0)

        def expresion(self):
            return self.getTypedRuleContext(tpiParser.ExpresionContext,0)


        def getRuleIndex(self):
            return tpiParser.RULE_asignacioninc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacioninc" ):
                listener.enterAsignacioninc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacioninc" ):
                listener.exitAsignacioninc(self)




    def asignacioninc(self):

        localctx = tpiParser.AsignacionincContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_asignacioninc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(tpiParser.IDENTIFICADOR)
            self.state = 153
            self.match(tpiParser.ASGINACIONINC)
            self.state = 154
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicional(self):
